# hackathon2-Spec-driven-ToDoApp

./: .gitignore  CLAUDE.md  README.md  demo_features.py  pyproject.toml  requirements.txt  run_app.py  test_edge_cases.py  test_run.py  test_todo_app.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/001-todo-enhancement/: 0001-todo-enhancement.spec.prompt.md  0002-todo-enhancement-plan.plan.prompt.md  0003-todo-enhancement-tasks.tasks.prompt.md  0004-todo-enhancement-implementation.green.prompt.md
history/prompts/002-todo-advanced-features/: 0001-complete-implementation-phase-7-tasks.green.prompt.md  0002-verify-application-with-uv-run.green.prompt.md  1-todo-advanced-features-spec.spec.prompt.md  2-todo-advanced-features-plan.plan.prompt.md  3-todo-advanced-features-tasks.tasks.prompt.md
history/prompts/constitution/: 001-update-hackathon-todo.constitution.prompt.md
specs/001-phase1-todo-console/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-advanced-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py  models.py  todo_manager.py
src/cli/: ui.py
src/models/: task.py
src/services/: todo_manager.py
src/utils/: __init__.py  date_utils.py
tests/integration/: test_complete_workflow.py
tests/unit/: test_date_utils.py  test_recurring_tasks.py
(+10 files in other folders)
